# starky-bn254

./: Cargo.toml  README.md
src/: addcy.rs  circuits.rs  columns.rs  constants.rs  constraint_consumer.rs  fibonacci_stark.rs  flags.rs  fq12.rs  fq12_exp.rs  fq2.rs  g1.rs  g1_exp.rs  g2.rs  g2_exp.rs  get_challenges.rs  input_target.rs  instruction.rs  lib.rs  lookup.rs  modular.rs  modular_zero.rs  native.rs  new_g1_exp.rs  pulse.rs  range_check.rs  recursive_verifier.rs  util.rs  utils.rs
src/curves/g1/: circuit.rs  exp.rs  mod.rs  muladd.rs
src/curves/g2/: batch_map_to_g2.rs  circuit.rs  exp.rs  mod.rs  muladd.rs
src/develop/: addcy.rs  constants.rs  fq.rs  fq12.rs  fq12_exp.rs  fq2.rs  fq_exp.rs  g1.rs  g1_exp.rs  g2.rs  g2_exp.rs  instruction.rs  mod.rs  modular.rs  modular_zero.rs  range_check.rs  utils.rs
src/fields/: fq2.rs  mod.rs  native.rs
src/fields/fq/: circuit.rs  exp.rs  mod.rs  mul.rs
src/fields/fq12/: circuit.rs  exp.rs  mod.rs  mul.rs
src/fields/fq12_u64/: circuit.rs  exp_u64.rs  flags_u64.rs  mod.rs
src/fq12_exp_u64/: flags_u64.rs  fq12_exp_u64.rs  mod.rs
src/modular/: mod.rs  modular.rs  modular_zero.rs  pol_utils.rs
src/utils/: equals.rs  flags.rs  lookup.rs  mod.rs  pulse.rs  range_check.rs  utils.rs
